i18n updated. Now language can be changed from all pages

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -9,7 +9,7 @@ login.label.username = Login
 login.label.password = Password
 login.button.submit = Sign in
 login.label.msg = You've been logged out successfully.
-login.label.error = Invalid username and password!
+login.label.error = Invalid username or password!
 403.label.title = HTTP Status 403 - Access is denied
 403.label.msg = You do not have permission to access this page!
 403.label.username = Username
@@ -30,3 +30,4 @@ client.button.fill = Fill
 client.button.pay = Pay
 client.label.welcome = Welcome
 client.label.msg = Only numbers
+language.text = Language
