--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -13,13 +13,13 @@ login.label.error = \u041D\u0435\u043F\u0440\u0430\u0432\u0435\u043B\u044C\u043D
 403.label.title = HTTP \u041F\u043E\u043C\u0438\u043B\u043A\u0430 403 - \u0412\u0445\u0456\u0434 \u043D\u0435\u043C\u043E\u0436\u043B\u0438\u0432\u0438\u0439
 403.label.msg = \u0423 \u0432\u0430\u0441 \u043D\u0435\u043C\u0430 \u0434\u043E\u0437\u0432\u043E\u043B\u0443 \u043D\u0430 \u0432\u0445\u0456\u0434
 403.label.username = \u0406\u043C\u2019\u044F
-403.label.msgu = <spring:message code="403.label.msg" />
+403.label.msgu = У вас недостатньо прав для переходу на цю сторінку
 admin.label.title = \u041A\u0456\u043C\u0433\u0430\u0442\u0430 \u0430\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0430
+admin.label.logout = \u0412\u0438\u0439\u0442\u0438
 admin.label.blocked = \u0417\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0430
 admin.label.unblocked = \u0420\u043E\u0437\u0431\u043B\u0430\u043A\u043E\u0432\u0430\u043D\u0430
 admin.button.unblock = \u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
 admin.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
-admin.label.logout = \u0412\u0438\u0439\u0442\u0438
 admin.label.msg = \u0422\u0456\u043B\u044C\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 client.label.title = \u041A\u0456\u043C\u043D\u0430\u0442\u0430 \u043A\u043B\u0456\u0454\u043D\u0442\u0430
 client.label.logout = \u0412\u0438\u0439\u0442\u0438
@@ -30,3 +30,4 @@ client.button.fill = \u041F\u043E\u043F\u043E\u0432\u043D\u0438\u0442\u0438
 client.button.pay = \u0421\u043F\u043B\u0430\u0442\u0438\u0442\u0438
 client.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 client.label.msg = \u0422\u0456\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
+language.text = Мова
