Admin page and logic ready

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -1,6 +1,6 @@
 welcome.label.title = Welcome page
 welcome.label.text = Hello, it's the fourth project of EPAM course 2016
-welcome.label.avalible = Available pages:
+welcome.label.available = Available pages:
 welcome.label.admin_room = Admin home room
 welcome.label.client_room = Client home room
 login.label.title = Authorization
@@ -17,7 +17,11 @@ login.label.error = Invalid username or password!
 admin.label.title = Admin room
 admin.label.blocked = Blocked
 admin.label.unblocked = Not blocked
+admin.label.deleted = Deleted
+admin.button.block = Block
 admin.button.unblock = Unblock
+admin.button.delete = Delete
+admin.button.undelete = Restore
 admin.label.welcome = Welcome
 admin.label.logout = Logout
 admin.label.msg = Only numbers
