--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -1,6 +1,6 @@
 welcome.label.title = \u0421\u0442\u0430\u0440\u0442\u043E\u0432\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0430
 welcome.label.text = \u0414\u043E\u0431\u0440\u0438\u0439 \u0434\u0435\u043D\u044C. \u0426\u0435 4 \u043F\u0440\u043E\u0435\u043A\u0442 \u043F\u043E EPAM
-welcome.label.avalible = \u0414\u043E\u0441\u0442\u0443\u043F\u043D\u0456 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0438
+welcome.label.available = \u0414\u043E\u0441\u0442\u0443\u043F\u043D\u0456 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0438
 welcome.label.admin_room = \u0421\u0442\u043E\u0440\u0456\u043D\u043A\u0430 \u0434\u043B\u044F \u0430\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u0456\u0432
 welcome.label.client_room = \u0421\u0442\u043E\u0440\u0456\u043D\u043A\u0430 \u0434\u043B\u044F \u043A\u043B\u0456\u0454\u043D\u0442\u0456\u0432
 login.label.title = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0456\u044F
@@ -18,7 +18,11 @@ admin.label.title = \u041A\u0456\u043C\u0433\u0430\u0442\u0430 \u0430\u0434\u043
 admin.label.logout = \u0412\u0438\u0439\u0442\u0438
 admin.label.blocked = \u0417\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0430
 admin.label.unblocked = \u0420\u043E\u0437\u0431\u043B\u0430\u043A\u043E\u0432\u0430\u043D\u0430
+admin.label.deleted = Видалена
+admin.button.block = Заблокувати
 admin.button.unblock = \u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
+admin.button.delete = Видалити
+admin.button.undelete = Відновити
 admin.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 admin.label.msg = \u0422\u0456\u043B\u044C\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 client.label.title = \u041A\u0456\u043C\u043D\u0430\u0442\u0430 \u043A\u043B\u0456\u0454\u043D\u0442\u0430
