--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -35,3 +35,5 @@ client.button.pay = Pay
 client.label.welcome = Welcome
 client.label.msg = Only numbers
 language.text = Language
+broken.label.msg = Sorry, something went wrong
+broken.label.title = Error
