--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -35,3 +35,5 @@ client.button.pay = \u0421\u043F\u043B\u0430\u0442\u0438\u0442\u0438
 client.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 client.label.msg = \u0422\u0456\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 language.text = Мова
+broken.label.msg = Вибачте, у нас щось зламалось
+broken.label.title = Помилка
