--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -18,10 +18,10 @@ admin.label.title = Admin room
 admin.label.blocked = Blocked
 admin.label.unblocked = Not blocked
 admin.label.deleted = Deleted
-admin.button.block = Block
-admin.button.unblock = Unblock
-admin.button.delete = Delete
-admin.button.undelete = Restore
+button.block = Block
+button.unblock = Unblock
+button.delete = Delete
+button.undelete = Restore
 admin.label.welcome = Welcome
 admin.label.logout = Logout
 admin.label.msg = Only numbers
@@ -37,3 +37,4 @@ client.label.msg = Only numbers
 language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
+label.welcom_room = welcome room
