--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -19,10 +19,10 @@ admin.label.logout = \u0412\u0438\u0439\u0442\u0438
 admin.label.blocked = \u0417\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0430
 admin.label.unblocked = \u0420\u043E\u0437\u0431\u043B\u0430\u043A\u043E\u0432\u0430\u043D\u0430
 admin.label.deleted = Видалена
-admin.button.block = Заблокувати
-admin.button.unblock = \u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
-admin.button.delete = Видалити
-admin.button.undelete = Відновити
+button.block = Заблокувати
+button.unblock = \u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
+button.delete = Видалити
+button.undelete = Відновити
 admin.label.welcome = \u0414\u043E\u0431\u0440\u043E\u0433\u043E \u0434\u043D\u044F
 admin.label.msg = \u0422\u0456\u043B\u044C\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 client.label.title = \u041A\u0456\u043C\u043D\u0430\u0442\u0430 \u043A\u043B\u0456\u0454\u043D\u0442\u0430
@@ -37,3 +37,4 @@ client.label.msg = \u0422\u0456\u043A\u0438 \u0447\u0438\u0441\u043B\u0430
 language.text = Мова
 broken.label.msg = Вибачте, у нас щось зламалось
 broken.label.title = Помилка
+label.welcom_room = Початкова кімната
