--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -37,4 +37,4 @@ client.label.msg = Only numbers
 language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
-label.welcom_room = welcome room
+label.welcom_room = Welcome room
