Client page - Front end

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -29,11 +29,14 @@ client.label.title = Client room
 client.label.logout = Logout
 client.label.blocked = Blocked
 client.label.unblocked = Not blocked
-client.button.block = Block
-client.button.fill = Fill
-client.button.pay = Pay
+client.label.cardName = Name of card which accept
+client.label.password = Your card password
 client.label.welcome = Welcome
 client.label.msg = Only numbers
+client.label.moneyName = Money
+client.button.block = Block
+client.button.fill = Fill
+client.button.sent = Sent
 language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
