Issue with msg solved

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -1,5 +1,5 @@
 welcome.label.title = Welcome page
-welcome.label.text = Hello, it's the fourth project of EPAM course 2016
+welcome.label.text = Hello, it's the fourth project of course 2016
 welcome.label.available = Available pages:
 welcome.label.admin_room = Admin home room
 welcome.label.client_room = Client home room
@@ -41,3 +41,8 @@ language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
 label.welcom_room = Welcome room
+client.label.errMsg = Incorrect data entered
+client.label.msgBill = You have no such bill
+client.label.msgCard = The card with such name doesn't exist
+client.label.msgPass = Password error
+client.label.msgMoney = Not enough money
