Localization resources updated. Room -> page

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -1,8 +1,8 @@
 welcome.label.title = Welcome page
 welcome.label.text = Hello, it's the fourth project of course 2016
 welcome.label.available = Available pages:
-welcome.label.admin_room = Admin home room
-welcome.label.client_room = Client home room
+welcome.label.admin_page = Admin home page
+welcome.label.client_page = Client home page
 login.label.title = Authorization
 login.label.text = Login with Username and Password
 login.label.username = Login
@@ -14,7 +14,7 @@ login.label.error = Invalid username or password!
 403.label.msg = You do not have permission to access this page!
 403.label.username = Username
 403.label.msgu = You do not have permission to access this page!
-admin.label.title = Admin room
+admin.label.title = Admin page
 admin.label.blocked = Blocked
 admin.label.unblocked = Not blocked
 admin.label.deleted = Deleted
@@ -24,15 +24,14 @@ button.delete = Delete
 button.undelete = Restore
 admin.label.welcome = Welcome
 admin.label.logout = Logout
-admin.label.msg = Only numbers
-client.label.title = Client room
+client.label.title = Client page
 client.label.logout = Logout
 client.label.blocked = Blocked
 client.label.unblocked = Not blocked
 client.label.cardName = Name of card which accept
 client.label.password = Your card password
 client.label.welcome = Welcome
-client.label.msg = Only numbers
+client.label.deleted = Deleted
 client.label.moneyName = Money
 client.button.block = Block
 client.button.fill = Fill
@@ -40,7 +39,7 @@ client.button.sent = Sent
 language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
-label.welcom_room = Welcome room
+label.welcom_page = Welcome page
 client.label.errMsg = Incorrect data entered
 client.label.msgBill = You have no such bill
 client.label.msgCard = The card with such name doesn't exist
