Added text of Task

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -1,11 +1,11 @@
 welcome.label.title = Welcome page
-welcome.label.text = Hello, it's the fourth project of course 2016
+welcome.label.text = Task 2. The system of payments. The client has one or more credit cards, each of which corresponds to some accounts in the payments system. The client can make using the Payment Account, to block the Account and replenish the Account. The administrator unlocks.
 welcome.label.available = Available pages:
 welcome.label.admin_page = Admin home page
 welcome.label.client_page = Client home page
 login.label.title = Authorization
 login.label.text = Login with Username and Password
-login.label.username = Login
+login.label.username = Email
 login.label.password = Password
 login.button.submit = Sign in
 login.label.msg = You've been logged out successfully.
