--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -1,18 +1,18 @@
 welcome.label.title = Початкова сторінка
-welcome.label.text = Добрий день. Це 4 проект з курсу 2016
+welcome.label.text = Завдання: 2. Система Платежів. Клієнт має одну або кілька Кредитних Карт, кожна з яких відповідає певному Рахунку в системі платежів. Клієнт може за допомогою Рахунки зробити Платіж, заблокувати Рахунок і поповнити Рахунок. Адміністратор знімає блокування.
 welcome.label.available = Доступні сторінки
 welcome.label.admin_page = Сторінка для адміністраторів
 welcome.label.client_page = Сторінка для клієнтів
 login.label.title = Авторизація
 login.label.text = Авторизація з логіном та паролем
-login.label.username = Логін
+login.label.username = Email
 login.label.password = Пароль
 login.button.submit = Увійти
 login.label.msg = Сесія завершена успішно
 login.label.error = Неправельний пароль або логін
 403.label.title = HTTP Помилка 403 - Вхід неможливий
 403.label.msg = У вас нема дозволу на вхід
-403.label.username = Імя
+403.label.username = І'мя
 403.label.msgu = У вас недостатньо прав для переходу на цю сторінку
 admin.label.title = Кімгата адміністратора
 admin.label.logout = Вийти
