Now client can block its bills

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -40,8 +40,9 @@ language.text = Language
 broken.label.msg = Sorry, something went wrong
 broken.label.title = Error
 label.welcom_page = Welcome page
-client.label.errMsg = Incorrect data entered
+client.label.errMsg = Impossible operation
 client.label.msgBill = You have no such bill
 client.label.msgCard = The card with such name doesn't exist
 client.label.msgPass = Password error
 client.label.msgMoney = Not enough money
+client.label.msgBillBlocked = Your bill is blocked
