--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -29,7 +29,7 @@ client.label.logout = Вийти
 client.label.blocked = Заблокована
 client.label.unblocked = Розблокована
 client.label.welcome = Доброго дня
-client.label.errMsg = Неправильні дані
+client.label.errMsg = Недоступна операція
 client.label.msgBill = У вас нема такого рахунку
 client.label.msgCard = Немає карти з таким ім'ям
 client.label.msgPass = Невірний пароль
@@ -45,3 +45,4 @@ language.text = Мова
 broken.label.msg = Вибачте, у нас щось зламалось
 broken.label.title = Помилка
 label.welcom_page = Початкова сторінка
+client.label.msgBillBlocked = Ваш рахунок блоковано
