Small protection fixes

--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -14,7 +14,7 @@ login.label.error = Неправельний пароль або логін
 403.label.msg = У вас нема дозволу на вхід
 403.label.username = І'мя
 403.label.msgu = У вас недостатньо прав для переходу на цю сторінку
-admin.label.title = Кімгата адміністратора
+admin.label.title = Кімната адміністратора
 admin.label.logout = Вийти
 admin.label.blocked = Заблокована
 admin.label.unblocked = Розблакована
