Solve problem with blocked bills

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -44,5 +44,5 @@ client.label.errMsg = Impossible operation
 client.label.msgBill = You have no such bill
 client.label.msgCard = The card with such name doesn't exist
 client.label.msgPass = Password error
-client.label.msgMoney = Not enough money
+client.label.msgError = Operation error
 client.label.msgBillBlocked = Your bill is blocked
