--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -33,7 +33,7 @@ client.label.errMsg = Недоступна операція
 client.label.msgBill = У вас нема такого рахунку
 client.label.msgCard = Немає карти з таким ім'ям
 client.label.msgPass = Невірний пароль
-client.label.msgMoney = Недостатньо грошей для переказу
+client.label.msgError = Помилка операції
 client.label.cardName = Ім'я карти, яка приймає платіж
 client.label.password = Пароль від твоє карти
 client.label.moneyName = Гроші
