Proper files loading.

--- a/src/main/resources/i18n/text_en.properties
+++ b/src/main/resources/i18n/text_en.properties
@@ -1,5 +1,7 @@
 welcome.label.title = Welcome page
-welcome.label.text = Task 2. The system of payments. The client has one or more credit cards, each of which corresponds to some accounts in the payments system. The client can make using the Payment Account, to block the Account and replenish the Account. The administrator unlocks.
+welcome.label.task = Task 2. The payment system
+welcome.label.text = The client has one or more credit cards, each of which corresponds to some accounts in the payments system. The client can make using the Payment Account, to block the Account and replenish the Account. The administrator unlocks.
+welcome.label.author = Olexandr Borysov
 welcome.label.available = Available pages:
 welcome.label.admin_page = Admin home page
 welcome.label.client_page = Client home page
