--- a/src/main/resources/i18n/text_ua.properties
+++ b/src/main/resources/i18n/text_ua.properties
@@ -1,5 +1,7 @@
 welcome.label.title = Початкова сторінка
-welcome.label.text = Завдання: 2. Система Платежів. Клієнт має одну або кілька Кредитних Карт, кожна з яких відповідає певному Рахунку в системі платежів. Клієнт може за допомогою Рахунки зробити Платіж, заблокувати Рахунок і поповнити Рахунок. Адміністратор знімає блокування.
+welcome.label.task = Завдання: 2. Система Платежів.
+welcome.label.text = Клієнт має одну або кілька Кредитних Карт, кожна з яких відповідає певному Рахунку в системі платежів. Клієнт може за допомогою Рахунки зробити Платіж, заблокувати Рахунок і поповнити Рахунок. Адміністратор знімає блокування.
+welcome.label.author = Борисов Олександр
 welcome.label.available = Доступні сторінки
 welcome.label.admin_page = Сторінка для адміністраторів
 welcome.label.client_page = Сторінка для клієнтів
